# Copyright (c) 2019 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

import("//brave/android/features/tab_ui/brave_tab_management_java_sources.gni")
import("//brave/android/feed/brave_feed_java_sources.gni")
import("//brave/browser/brave_ads/android/java_sources.gni")
import("//brave/components/brave_referrals/buildflags/buildflags.gni")
import("//brave/components/permissions/android/java_sources.gni")
import("//brave/components/safetynet/java_sources.gni")
import("//components/feed/features.gni")

brave_java_sources = [
  "../../brave/android/java/org/chromium/chrome/browser/BraveAppHooks.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveBadge.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveFeatureList.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveHelper.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveIntentHandler.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveLaunchIntentDispatcher.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRelaunchUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsBalance.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsDonationSentActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsExternalWallet.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsHelper.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsNativeWorker.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsObserver.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsOnboardingPagerAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsPanelPopup.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsPublisher.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsSiteBannerActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsUserWalletActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsVerifyWalletActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveSyncInformers.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveSyncWorker.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveWalletProvider.java",
  "../../brave/android/java/org/chromium/chrome/browser/CrossPromotionalModalDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/DormantUsersEngagementDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/InternetConnection.java",
  "../../brave/android/java/org/chromium/chrome/browser/QRCodeShareDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/app/BraveActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/app/appmenu/AppMenuIconRowFooter.java",
  "../../brave/android/java/org/chromium/chrome/browser/app/appmenu/BraveAppMenuPropertiesDelegateImpl.java",
  "../../brave/android/java/org/chromium/chrome/browser/appmenu/BraveTabbedAppMenuPropertiesDelegate.java",
  "../../brave/android/java/org/chromium/chrome/browser/autofill/BraveAutofillPopupBridge.java",
  "../../brave/android/java/org/chromium/chrome/browser/bookmarks/BraveBookmarkUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/brave_news/BraveNewsAdapterFeedCard.java",
  "../../brave/android/java/org/chromium/chrome/browser/brave_news/BraveNewsBottomSheetDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/brave_news/BraveNewsControllerFactory.java",
  "../../brave/android/java/org/chromium/chrome/browser/brave_news/BraveNewsUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/brave_news/CardBuilderFeedCard.java",
  "../../brave/android/java/org/chromium/chrome/browser/brave_news/LinearLayoutManagerWrapper.java",
  "../../brave/android/java/org/chromium/chrome/browser/brave_news/models/FeedItemCard.java",
  "../../brave/android/java/org/chromium/chrome/browser/brave_news/models/FeedItemsCard.java",
  "../../brave/android/java/org/chromium/chrome/browser/brave_stats/BraveStatsBottomSheetDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/brave_stats/BraveStatsUtil.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/AssetRatioServiceFactory.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/BlockchainRegistryFactory.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/BraveWalletServiceFactory.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/JsonRpcServiceFactory.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/KeyringServiceFactory.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/SwapServiceFactory.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/TxServiceFactory.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AccountDetailActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AccountDetailsWithQrActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AccountPrivateKeyActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AddAccountActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AdvanceTxSettingActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AssetDetailActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/activities/BraveWalletActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/activities/BraveWalletBaseActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/activities/BuySendSwapActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/activities/NetworkSelectorActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/AccountSpinnerAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/ApproveTxFragmentPageAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/CryptoFragmentPageAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/CryptoWalletOnboardingPagerAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/NetworkSelectorAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/NetworkSpinnerAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/RecoveryPhraseAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/WalletCoinAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/AccountsFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/ApproveTxBottomSheetDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/EditVisibleAssetsBottomSheetDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/PortfolioFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/SwapBottomSheetDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/TxDetailsFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/TxFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/BackupWalletFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/CryptoOnboardingFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/RecoveryPhraseFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/RestoreWalletFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/SecurePasswordFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/SetupWalletFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/UnlockWalletFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/VerifyRecoveryPhraseFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/listeners/OnNextPage.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/listeners/OnWalletListItemClick.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/model/TxNonSwipeableViewPager.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/model/WalletListItemModel.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/observers/ApprovedTxObserver.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/observers/KeyringServiceObserver.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/observers/TxServiceObserver.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/observers/WalletMojoObserverBase.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/util/AssetsPricesHelper.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/util/AsyncUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/util/Blockies.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/util/ItemOffsetDecoration.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/util/KeystoreHelper.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/util/NavigationItem.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/util/PendingTxHelper.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/util/PortfolioHelper.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/util/SingleTokenBalanceHelper.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/util/SmoothLineChartEquallySpaced.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/util/TokenUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/util/Utils.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/util/Validations.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/util/WalletConstants.java",
  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/util/WalletNativeUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/custom_layout/HeightWrappingViewPager.java",
  "../../brave/android/java/org/chromium/chrome/browser/custom_layout/NonSwipeableViewPager.java",
  "../../brave/android/java/org/chromium/chrome/browser/custom_layout/VerticalViewPager.java",
  "../../brave/android/java/org/chromium/chrome/browser/custom_layout/popup_window_tooltip/ArrowColorDrawable.java",
  "../../brave/android/java/org/chromium/chrome/browser/custom_layout/popup_window_tooltip/PopupWindowTooltip.java",
  "../../brave/android/java/org/chromium/chrome/browser/custom_layout/popup_window_tooltip/PopupWindowTooltipUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/decentralized_dns/settings/ENSSettingsFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/decentralized_dns/settings/RadioButtonGroupENSResolveMethodPreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/decentralized_dns/settings/RadioButtonGroupUnstoppableDomainsResolveMethodPreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/decentralized_dns/settings/UnstoppableDomainsSettingsFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/document/BraveLauncherActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/download/BraveMimeUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/download/settings/BraveDownloadSettings.java",
  "../../brave/android/java/org/chromium/chrome/browser/externalnav/BraveExternalNavigationHandler.java",
  "../../brave/android/java/org/chromium/chrome/browser/feedback/BraveHelpAndFeedbackLauncherImpl.java",
  "../../brave/android/java/org/chromium/chrome/browser/firstrun/BraveFirstRunFlowSequencer.java",
  "../../brave/android/java/org/chromium/chrome/browser/firstrun/BraveFreIntentCreator.java",
  "../../brave/android/java/org/chromium/chrome/browser/firstrun/P3aOnboardingActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/help/BraveHelpAndFeedbackLauncher.java",
  "../../brave/android/java/org/chromium/chrome/browser/homepage/BraveHomepageManager.java",
  "../../brave/android/java/org/chromium/chrome/browser/homepage/settings/BraveHomepageSettings.java",
  "../../brave/android/java/org/chromium/chrome/browser/infobar/BraveInfoBarIdentifier.java",
  "../../brave/android/java/org/chromium/chrome/browser/informers/BraveAndroidSyncDisabledInformer.java",
  "../../brave/android/java/org/chromium/chrome/browser/language/settings/BraveLanguageSettings.java",
  "../../brave/android/java/org/chromium/chrome/browser/local_database/BraveStatsTable.java",
  "../../brave/android/java/org/chromium/chrome/browser/local_database/DatabaseHelper.java",
  "../../brave/android/java/org/chromium/chrome/browser/local_database/SavedBandwidthTable.java",
  "../../brave/android/java/org/chromium/chrome/browser/local_database/TopSiteTable.java",
  "../../brave/android/java/org/chromium/chrome/browser/night_mode/settings/BraveRadioButtonGroupThemePreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/night_mode/settings/BraveThemePreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/notifications/BraveNotificationPlatformBridge.java",
  "../../brave/android/java/org/chromium/chrome/browser/notifications/BraveNotificationSettingsBridge.java",
  "../../brave/android/java/org/chromium/chrome/browser/notifications/BraveOnboardingNotification.java",
  "../../brave/android/java/org/chromium/chrome/browser/notifications/retention/RetentionNotification.java",
  "../../brave/android/java/org/chromium/chrome/browser/notifications/retention/RetentionNotificationPublisher.java",
  "../../brave/android/java/org/chromium/chrome/browser/notifications/retention/RetentionNotificationUtil.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp/BraveNewTabPage.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp/BraveNewTabPageLayout.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp/IncognitoNewTabPageView.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp/widget/NTPWidgetAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp/widget/NTPWidgetItem.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp/widget/NTPWidgetManager.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp/widget/NTPWidgetStackActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp/widget/NTPWidgetStackAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp/widget/SwipeAndDragHelper.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/NTPBackgroundImagesBridge.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/RewardsBottomSheetDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/model/BackgroundImage.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/model/ImageCredit.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/model/NTPImage.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/model/SponsoredLogo.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/model/SponsoredTab.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/model/TopSite.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/model/Wallpaper.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/util/FetchWallpaperWorkerTask.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/util/NTPUtil.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/util/NewTabPageListener.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/util/SponsoredImageUtil.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/BraveRewardsOnboardingFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/BraveTalkOptInPopup.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/BraveTalkOptInPopupListener.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/OnViewPagerAction.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/OnboardingActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/OnboardingPrefManager.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/OnboardingViewPagerAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/SearchActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/SearchEngineEnum.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/SearchEngineOnboardingFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/TroubleshootingOnboardingFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/v2/HighlightDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/v2/HighlightItem.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/v2/HighlightView.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/v2/OnboardingV2Fragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/v2/OnboardingV2PagerAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/partnercustomizations/BravePartnerBrowserCustomizations.java",
  "../../brave/android/java/org/chromium/chrome/browser/partnercustomizations/CloseBraveManager.java",
  "../../brave/android/java/org/chromium/chrome/browser/password_manager/settings/BravePasswordSettingsBase.java",
  "../../brave/android/java/org/chromium/chrome/browser/preferences/BravePrefServiceBridge.java",
  "../../brave/android/java/org/chromium/chrome/browser/preferences/BravePreferenceKeys.java",
  "../../brave/android/java/org/chromium/chrome/browser/preferences/website/BraveShieldsContentSettings.java",
  "../../brave/android/java/org/chromium/chrome/browser/preferences/website/BraveShieldsContentSettingsObserver.java",
  "../../brave/android/java/org/chromium/chrome/browser/privacy/settings/BravePrivacySettings.java",
  "../../brave/android/java/org/chromium/chrome/browser/qrreader/BarcodeTracker.java",
  "../../brave/android/java/org/chromium/chrome/browser/qrreader/BarcodeTrackerFactory.java",
  "../../brave/android/java/org/chromium/chrome/browser/qrreader/CameraSource.java",
  "../../brave/android/java/org/chromium/chrome/browser/qrreader/CameraSourcePreview.java",
  "../../brave/android/java/org/chromium/chrome/browser/query_tiles/BraveQueryTileSection.java",
  "../../brave/android/java/org/chromium/chrome/browser/rate/RateDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/rate/RateFeedbackUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/rate/RateUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/rewards/BraveRewardsPanel.java",
  "../../brave/android/java/org/chromium/chrome/browser/safe_browsing/settings/BraveStandardProtectionSettingsFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/set_default_browser/BraveSetDefaultBrowserUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/set_default_browser/OnBraveSetDefaultBrowserListener.java",
  "../../brave/android/java/org/chromium/chrome/browser/set_default_browser/SetDefaultBrowserActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/set_default_browser/SetDefaultBrowserBottomSheetFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/AppearancePreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BackgroundImagesPreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveCustomTabsPreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveDialogPreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveLicensePreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveLicensePreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveMainPreferencesBase.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveNewsCategorySources.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveNewsPreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BravePreferenceDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BravePreferenceFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveRewardsPreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveRewardsResetPreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveRewardsResetPreferenceDialog.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveSearchEngineUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveSearchEnginesPreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveSettingsActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveSettingsLauncherImpl.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveStatsPreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveSyncScreensPreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveVpnPreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveVpnServerSelectionPreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveWalletAddNetworksFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveWalletAutoLockPreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveWalletNetworksPreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveWalletNetworksPreferenceFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveWalletPreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveWalletResetPreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveWalletResetTxHistoryAndNoncePreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveWebrtcPolicyPreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveWebrtcPolicyPreferencesFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/NetworkListBaseAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/SearchEngineTabModelSelectorObserver.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/SearchPreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/VpnCalloutPreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/developer/BraveQAPreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/developer/BraveRewardsDebugPreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/themes/BraveRadioButtonGroupCustomHomepageThemePreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/share/BraveShareDelegateImpl.java",
  "../../brave/android/java/org/chromium/chrome/browser/shields/BraveShieldsHandler.java",
  "../../brave/android/java/org/chromium/chrome/browser/shields/BraveShieldsMenuObserver.java",
  "../../brave/android/java/org/chromium/chrome/browser/shields/BraveShieldsUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/shields/ShieldsTooltipEnum.java",
  "../../brave/android/java/org/chromium/chrome/browser/signin/BraveSigninManager.java",
  "../../brave/android/java/org/chromium/chrome/browser/site_settings/BraveSiteSettingsDelegate.java",
  "../../brave/android/java/org/chromium/chrome/browser/site_settings/DesktopModePreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/site_settings/PlayYTVideoInBrowserPreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/suggestions/tile/BraveTileView.java",
  "../../brave/android/java/org/chromium/chrome/browser/sync/BraveSyncDevices.java",
  "../../brave/android/java/org/chromium/chrome/browser/sync/settings/BraveManageSyncSettings.java",
  "../../brave/android/java/org/chromium/chrome/browser/tabmodel/BraveTabCreator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/BraveHomeButton.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/BraveIncognitoToggleTabLayout.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/BraveToolbarManager.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BookmarksButton.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomTabSwitcherActionMenuCoordinator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarConfiguration.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarCoordinator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarNewTabButton.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarVariationManager.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BraveBottomControlsCoordinator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BraveScrollingBottomViewResourceFrameLayout.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarCoordinator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarLinearLayout.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarMediator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarModel.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarViewBinder.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/SearchAccelerator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/ShareButton.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarCoordinator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarMediator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarModel.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarViewBinder.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/menu_button/BraveMenuButtonCoordinator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/top/BraveTabSwitcherModeTTCoordinator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/top/BraveTabSwitcherModeTopToolbar.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/top/BraveToolbarLayoutImpl.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/top/BraveTopToolbarCoordinator.java",
  "../../brave/android/java/org/chromium/chrome/browser/ui/brave_tricks/checkbox_to_switch/CheckBoxPreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/ui/messages/infobar/BraveSimpleConfirmInfoBarBuilder.java",
  "../../brave/android/java/org/chromium/chrome/browser/upgrade/BravePackageReplacedBroadcastReceiver.java",
  "../../brave/android/java/org/chromium/chrome/browser/upgrade/BraveUpgradeJobIntentServiceImpl.java",
  "../../brave/android/java/org/chromium/chrome/browser/upgrade/NotificationIntent.java",
  "../../brave/android/java/org/chromium/chrome/browser/util/BraveDbUtil.java",
  "../../brave/android/java/org/chromium/chrome/browser/util/ConfigurationUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/util/ImageUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/util/PackageUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/util/TabUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/vpn/BraveVpnCalloutDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/vpn/BraveVpnConfirmDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/vpn/BraveVpnDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/vpn/BraveVpnNativeWorker.java",
  "../../brave/android/java/org/chromium/chrome/browser/vpn/BraveVpnObserver.java",
  "../../brave/android/java/org/chromium/chrome/browser/vpn/BraveVpnParentActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/vpn/BraveVpnPlanPagerAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/vpn/BraveVpnPlansActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/vpn/BraveVpnPrefUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/vpn/BraveVpnProfileActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/vpn/BraveVpnProfileUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/vpn/BraveVpnServerRegion.java",
  "../../brave/android/java/org/chromium/chrome/browser/vpn/BraveVpnServerSelectionAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/vpn/BraveVpnSupportActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/vpn/BraveVpnUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/vpn/InAppPurchaseWrapper.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceAccountBalance.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceBuyFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceCoinNetworks.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceConvert.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceConvertFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceDepositFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceNativeWorker.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceObserver.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceSpinnerAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceSummaryFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceWidgetManager.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/CoinNetworkModel.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/ConvertAsset.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/CryptoWidgetBottomSheetDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/CryptoWidgetTabAdapter.java",
]

brave_java_sources += brave_ads_java_sources
brave_java_sources += brave_rewards_java_sources
brave_java_sources += brave_feed_java_sources
brave_java_sources += brave_public_tab_management_java_sources

if (enable_brave_referrals) {
  brave_java_sources += [ "../../brave/android/java/org/chromium/chrome/browser/util/BraveReferrer.java" ]
}

brave_browser_ui_android_appmenu_internal_sources = [
  "//brave/browser/ui/android/appmenu/internal/java/src/org/chromium/chrome/browser/ui/appmenu/BraveAppMenu.java",
  "//brave/browser/ui/android/default_browser_promo/java/src/org/chromium/chrome/browser/ui/default_browser_promo/BraveDefaultBrowserPromoUtils.java",
]

brave_browser_ui_android_toolbar_sources = [
  "//brave/browser/ui/android/toolbar/java/src/org/chromium/chrome/browser/toolbar/bottom/BraveBottomControlsMediator.java",
  "//brave/browser/ui/android/toolbar/java/src/org/chromium/chrome/browser/toolbar/top/BraveToolbarLayout.java",
]

brave_java_base_sources = [
  "//brave/android/java/org/chromium/base/BraveCommandLineInitUtil.java",
  "//brave/android/java/org/chromium/base/BraveReflectionUtil.java",
]

brave_java_base_module_sources = [
  "//brave/android/java/org/chromium/chrome/browser/base/SplitCompatJobIntentService.java",
  "//brave/android/java/org/chromium/chrome/browser/upgrade/BraveUpgradeJobIntentService.java",
]

brave_java_base_module_deps =
    [ "//third_party/androidx:androidx_core_core_java" ]
